added base controller and attempt to load settings

--- a/PlexLander/Views/Landing/Index.cshtml
+++ b/PlexLander/Views/Landing/Index.cshtml
@@ -106,3 +106,6 @@
         </ul>
     </div>
 </div>
+<p>
+    <a href='@Html.Value(ViewData["Hostname"].ToString(),ViewData["PlexUrl"].ToString())'>Plex</a>
+</p>
