Main page loads now

--- a/PlexLander/Views/Landing/Index.cshtml
+++ b/PlexLander/Views/Landing/Index.cshtml
@@ -107,5 +107,5 @@
     </div>
 </div>
 <p>
-    <a href='@Html.Value(ViewData["Hostname"].ToString(),ViewData["PlexUrl"].ToString())'>Plex</a>
+    <a href='@ViewData["Hostname"]'>Plex</a>
 </p>
