--- a/PlexLander/Views/Landing/Index.cshtml
+++ b/PlexLander/Views/Landing/Index.cshtml
@@ -1,1 +1,15 @@
 ﻿@model PlexLander.ViewModels.Landing.LandingViewModel
+<div class="page-header">
+    <h1>Welcome to @ViewBag["ServerName"]</h1>
+    <p class="lead">Check what's new or add something new. It's up to you!</p>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <p>Plex</p>
+    </div>
+    <div class="col-md-4">
+        <p>
+            Radarr
+        </p>
+    </div>
+</div>
