Created model and initialized local db

--- a/PlexLander/Views/Landing/Index.cshtml
+++ b/PlexLander/Views/Landing/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PlexLander.ViewModels.Landing.LandingViewModel
 <div class="page-header">
-    <h1>Welcome to @ViewBag["ServerName"]</h1>
+    <h1>Welcome to Volk!</h1>
     <p class="lead">Check what's new or add something new. It's up to you!</p>
 </div>
 <div class="row">
