--- a/PlexLander/Views/Shared/_Layout.cshtml
+++ b/PlexLander/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
 ﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+@model PlexLander.ViewModels.ViewModelBase
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PlexLander</title>
+    <title>PlexLander @(String.IsNullOrEmpty(Model.ServerName)?String.Empty:String.Format("- {0}",Model.ServerName))</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -22,15 +23,27 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PlexLander</a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand" style="padding:0;"><img src="~/images/werewolf.png" height="50" alt="@Model.ServerName" /></a>
+            </div>
+            <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a asp-controller="Settings" asp-action="Index">Settings</a></li>
+                </ul>
             </div>
         </div>
-    </nav>
+</nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
             <p>&copy; 2017 - PlexLander</p>
+            <p>Wolf icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
         </footer>
     </div>
 
