--- a/PlexLander/Views/Shared/_Layout.cshtml
+++ b/PlexLander/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PlexLander @(String.IsNullOrEmpty(Model.ServerName)?String.Empty:String.Format("- {0}",Model.ServerName))</title>
+    <title>PlexLander @(String.IsNullOrEmpty(Model.ServerName) ? String.Empty : String.Format("- {0}", Model.ServerName))</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -29,11 +29,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand" style="padding:0;"><img src="~/images/werewolf.png" height="50" alt="@Model.ServerName" /></a>
+                <a asp-controller="Landing" asp-action="Index" class="navbar-brand" style="padding:0;"><img src="~/images/werewolf.png" height="50" alt="@Model.ServerName" /></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a asp-controller="Settings" asp-action="Index">Settings</a></li>
+                    <li bs-controller="Settings" bs-action="Index" bs-navigation-active-class="active"><a asp-controller="Settings" asp-action="Index">Settings</a></li>
                 </ul>
             </div>
         </div>
