--- a/PlexLander/Views/_ViewImports.cshtml
+++ b/PlexLander/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using PlexLander
 @using PlexLander.TagHelpers
+@using jQWidgets.AspNetCore.Mvc.Bootstrap.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, QWidgets.AspNetCore.Mvc.Bootstrap.TagHelpers
 @addTagHelper *, PlexLander
