--- a/PlexLander/Views/Landing/Index.cshtml
+++ b/PlexLander/Views/Landing/Index.cshtml
@@ -3,34 +3,56 @@
     <h1>Welcome to @Model.ServerName!</h1>
     <p class="lead">Check what's new or add something new. It's up to you!</p>
 </div>
-@{ 
+@{
     int appCount = @Model.AppList.Count();
-    int rowCount = (appCount / 3) + (appCount % 3);
+    int rowCount = (appCount / 3);
+    if (appCount % 3 > 0)
+    {
+        rowCount++;
+    }
     var appEnumerator = Model.AppList.GetEnumerator();
+    if (appEnumerator.Current == null)
+    {
+        appEnumerator.MoveNext();
+    }
     for (var i = 1; i <= rowCount; i++)
     {
         <div class="row">
             <div class="col-md-4">
-                <div>
-                    <img src="@appEnumerator.Current.Icon" width="256" height="256" /><br/>
-                    <a href="@appEnumerator.Current.Url"><h3>@appEnumerator.Current.Name</h3></a>
-                    @appEnumerator.MoveNext();
+                <div class="app-presenter">
+                    <a href="@appEnumerator.Current.Url">
+                        <img src="/images/@appEnumerator.Current.Icon" width="256" height="256" /><br />
+                        <h3>@appEnumerator.Current.Name</h3>
+                    </a>
+                    @{
+                        appEnumerator.MoveNext();
+                    }
                 </div>
             </div>
             <div class="col-md-4">
-                <div>
-                    <img src="@appEnumerator.Current.Icon" width="256" height="256" /><br />
-                    <a href="@appEnumerator.Current.Url"><h3>@appEnumerator.Current.Name</h3></a>
-                    @appEnumerator.MoveNext();
+                <div class="app-presenter">
+                    @if (appEnumerator.Current != null)
+                    {
+                        <a href="@appEnumerator.Current.Url">
+                            <img src="/images/@appEnumerator.Current.Icon" width="256" height="256" /><br />
+                            <h3>@appEnumerator.Current.Name</h3>
+                        </a>
+                        appEnumerator.MoveNext();
+                    }
                 </div>
             </div>
             <div class="col-md-4">
-                <div>
-                    <img src="@appEnumerator.Current.Icon" width="256" height="256" /><br />
-                    <a href="@appEnumerator.Current.Url"><h3>@appEnumerator.Current.Name</h3></a>
-                    @appEnumerator.MoveNext();
+                <div class="app-presenter">
+                    @if (appEnumerator.Current != null)
+                    {
+                        <a href="@appEnumerator.Current.Url">
+                            <img src="/images/@appEnumerator.Current.Icon" width="256" height="256" /><br />
+                            <h3>@appEnumerator.Current.Name</h3>
+                        </a>
+                        @appEnumerator.MoveNext();
+                    }
                 </div>
             </div>
         </div>
-    }
+                        }
 }
