more work on edit

--- a/PlexLander/wwwroot/css/site.css
+++ b/PlexLander/wwwroot/css/site.css
@@ -48,3 +48,8 @@ tr.text-vertical-center > td {
     display:block;
     margin:0 auto;
 }
+
+span.edit {
+    display:none;
+    visibility:collapse;
+}
