--- a/PlexLander/Views/Settings/_AppRow.cshtml
+++ b/PlexLander/Views/Settings/_AppRow.cshtml
@@ -1,13 +1,21 @@
 ﻿@using PlexLander.Models
-@model PlexLander.Models.App
+@model App
+@{ int modelId = Model.Id; }
 <tr class="text-vertical-center">
-    <td>@Model.Name</td>
-    <td><a href="@Model.Url">@Model.Url</a></td>
     <td>
-        <img src="/images/@Model.Icon" alt="@Model.Icon" height="25" width="25" /><br />
+        <span class="view view-id-@modelId">@Model.Name</span>
+        <span class="edit edit-id-@modelId"></span>
+    </td>
+    <td><a class="view view-id-@modelId" href="@Model.Url">@Model.Url</a></td>
+    <td>
+        <img src="/images/@Model.Icon" alt="@Model.Icon" height="25" width="25" class="view view-id-@modelId" />
     </td>
     <td>
-        <button type="button" class="btn btn-default">Edit</button>
-        <button type="button" class="btn btn-danger" onclick="confirmDelete('@Url.Action("DeleteApp","Settings", new { Id = Model.Id })','#modalDeleteConfirmation');">Delete</button>
+        <span class="edit edit-id-@modelId">
+            <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span> Save</button>
+            <button type="button" class="btn btn-warning" onclick="cancelEditApp(@modelId);"><span class="glyphicon glyphicon-floppy-remove" aria-hidden="true"></span> Cancel</button>
+        </span>
+        <button type="button" class="btn btn-default" onclick="editApp(@modelId,$(this));"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</button>
+        <button type="button" class="btn btn-danger" onclick="confirmDelete('@Url.Action("DeleteApp","Settings", new { Id = modelId })','#modalDeleteConfirmation');"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</button>
     </td>
 </tr>
