--- a/PlexLander/Views/Settings/_AppRow.cshtml
+++ b/PlexLander/Views/Settings/_AppRow.cshtml
@@ -1,21 +1,38 @@
 ﻿@using PlexLander.Models
 @model App
-@{ int modelId = Model.Id; }
+@{
+    int modelId = Model.Id;
+    var request = Context.Request;
+}
 <tr class="text-vertical-center">
     <td>
         <span class="view view-id-@modelId">@Model.Name</span>
-        <span class="edit edit-id-@modelId"></span>
+        <span class="edit edit-id-@modelId">
+            @Html.TextBoxFor(m => m.Name, new { @class = "form-control", placeholder = "Name", value = Model.Name })
+        </span>
     </td>
-    <td><a class="view view-id-@modelId" href="@Model.Url">@Model.Url</a></td>
+    <td>
+        <a class="view view-id-@modelId" href="@Model.Url">@Model.Url</a>
+        <span class="edit edit-id-@modelId">
+            <span class="input-group-addon" id="url-addon">@((request.IsHttps) ? "https" : "http")://@(request.Host.Host)</span>
+            @Html.TextBoxFor(m => m.Url, new { @class = "form-control", placeholder = "/Url", value = Model.Url })
+        </span>
+    </td>
     <td>
         <img src="/images/@Model.Icon" alt="@Model.Icon" height="25" width="25" class="view view-id-@modelId" />
+        <span class="edit edit-id-@modelId">
+            <span class="input-group-addon" id="icon-addon">@((request.IsHttps) ? "https" : "http")://@(request.Host.Host)/images/</span>
+            @Html.TextBoxFor(m => m.Icon, new { @class = "form-control", placeholder = "Icon", value = Model.Icon })
+        </span>
     </td>
     <td>
         <span class="edit edit-id-@modelId">
             <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></span> Save</button>
             <button type="button" class="btn btn-warning" onclick="cancelEditApp(@modelId);"><span class="glyphicon glyphicon-floppy-remove" aria-hidden="true"></span> Cancel</button>
         </span>
-        <button type="button" class="btn btn-default" onclick="editApp(@modelId,$(this));"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</button>
-        <button type="button" class="btn btn-danger" onclick="confirmDelete('@Url.Action("DeleteApp","Settings", new { Id = modelId })','#modalDeleteConfirmation');"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</button>
+        <span class="view view-id-@modelId">
+            <button type="button" class="btn btn-default" onclick="editApp(@modelId,$(this))"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</button>
+            <button type="button" class="btn btn-danger" onclick="confirmDelete('@Url.Action("DeleteApp","Settings", new { Id = modelId })','#modalDeleteConfirmation');"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</button>
+        </span>
     </td>
 </tr>
