Fixed a bug in the index view

--- a/PlexLander/Views/Settings/Index.cshtml
+++ b/PlexLander/Views/Settings/Index.cshtml
@@ -12,7 +12,7 @@
 </ul>
 <div class="tab-content">
     <div class="tab-pane active" id="Apps">
-        @if (Model.Apps.Count == 0)
+        @if (Model.Apps.Count() == 0)
         {
             <text>
             <h3>It seems you don't have any apps yet.</h3>
