--- a/PlexLander/Views/Shared/_Layout.cshtml
+++ b/PlexLander/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - PlexLander</p>
+            <p>&copy; 2017 - PlexLander v: @ViewData["AppVersion"]</p>
             <p>Wolf icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
         </footer>
     </div>
