Start rework on plex server settings (for whatsnew)

--- a/PlexLander/Views/Settings/Index.cshtml
+++ b/PlexLander/Views/Settings/Index.cshtml
@@ -22,10 +22,10 @@
                 {
                     @Html.LabelFor(m => m.PlexServerSettingsViewModel.IsEnabled)
                     @Html.CheckBoxFor(m => m.PlexServerSettingsViewModel.IsEnabled)
-                    @Html.LabelFor(m => m.PlexServerSettingsViewModel.Token)
-                    @Html.TextBoxFor(m => m.PlexServerSettingsViewModel.Token)
-
-                }
+                    
+                    @Html.LabelFor(m => m.PlexServerSettingsViewModel.Token)<text>:</text>
+                    @Html.DisplayFor(m => m.PlexServerSettingsViewModel.Token)
+}
             </div>
         </div>
     </div> <!-- servers tab-->
