--- a/PlexLander/Views/Settings/Index.cshtml
+++ b/PlexLander/Views/Settings/Index.cshtml
@@ -1,5 +1,6 @@
 @using PlexLander.Models
 @using PlexLander.ViewModels.Settings
+@using PlexLander.HtmlHelpers
 @model SettingsIndexViewModel
 <div class="page-header">
     <h1>
@@ -21,12 +22,12 @@
                 @using (Html.BeginForm("SavePlexServerSettings", "Settings", FormMethod.Post, new { @class = "form-inline" }))
                 {
                     @Html.LabelFor(m => m.PlexServerSettingsViewModel.IsEnabled)
-                    @Html.CheckBoxFor(m => m.PlexServerSettingsViewModel.IsEnabled)
-
+                    @Html.ToggleSwitchFor(m => m.PlexServerSettingsViewModel.IsEnabled)
+                    <br />
                     if (Model.PlexServerSettingsViewModel.IsEnabled)
                     {
                         @Html.LabelFor(m => m.PlexServerSettingsViewModel.Token)<text>: </text>
-                        @Html.DisplayFor(m => m.PlexServerSettingsViewModel.Token)
+                        @Html.TextBoxFor(m => m.PlexServerSettingsViewModel.Token)
                     }
                 }
             </div>
