--- a/PlexLander/Views/Settings/Index.cshtml
+++ b/PlexLander/Views/Settings/Index.cshtml
@@ -19,15 +19,20 @@
                 <h3>Plex</h3>
             </div>
             <div class="panel-body">
-                @using (Html.BeginForm("SavePlexServerSettings", "Settings", FormMethod.Post, new { @class = "form-inline" }))
+                @using (Html.BeginForm("SavePlexServerSettings", "Settings", FormMethod.Post))
                 {
-                    @Html.LabelFor(m => m.PlexServerSettingsViewModel.IsEnabled)
-                    @Html.ToggleSwitchFor(m => m.PlexServerSettingsViewModel.IsEnabled)
-                    <br />
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.PlexServerSettingsViewModel.IsEnabled)
+                        @Html.ToggleSwitchFor(m => m.PlexServerSettingsViewModel.IsEnabled)
+                        <button type="submit"></button>
+                    </div>
+
                     if (Model.PlexServerSettingsViewModel.IsEnabled)
                     {
-                        @Html.LabelFor(m => m.PlexServerSettingsViewModel.Token)<text>: </text>
-                        @Html.TextBoxFor(m => m.PlexServerSettingsViewModel.Token)
+                        <div class="form-group" id="plexsettings-followup">
+                            @Html.LabelFor(m => m.PlexServerSettingsViewModel.Token)<text>: </text>
+                            @Html.TextBoxFor(m => m.PlexServerSettingsViewModel.Token)
+                        </div>
                     }
                 }
             </div>
@@ -85,3 +90,8 @@
 
     </div>
 </div>
+@section Scripts {
+<script type="text/javascript">
+        disableWithToggle("@Html.NameFor(m => m.PlexServerSettingsViewModel.IsEnabled)", "plexsettings-followup");
+</script>
+}
