--- a/PlexLander/Views/Settings/Index.cshtml
+++ b/PlexLander/Views/Settings/Index.cshtml
@@ -17,29 +17,7 @@
         <div class="panel panel-primary">
             <!-- Plex server tab -->
             @Html.Partial("_PlexServerSettings", Model)
-            <div id="modalPlexAuthentication" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Please enter your credentials</h4>
-                        </div>
-                        <div class="modal-body">
-                            @using (Html.BeginForm("PlexAuthentication", "Settings", FormMethod.Post, new { id="plex-auth-form" }))
-                            {
-                                <div class="form-group">
-                                    <input type="text" name="username" placeholder="Username" />
-                                    <input type="password" name="password" placeholder="Password" />
-                                </div>
-                            }
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-success" id="plexLoginButton" onclick="bindButtonToForm('plex-auth-form')"><span class="glyphicon glyphicon-log-in"></span> Log in</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            @Html.Partial("_PlexTvAuthenticationModalDialog")
         </div>
     </div>
     <div class="tab-pane" id="Apps">
@@ -109,5 +87,7 @@
                 <text>$.notify('Login failed. ' + '@loginResult.Error', 'error');</text>
             }
         }
+
+        wireUpForm($('form#plex-auth-form'));
     </script>
 }
