Authentication to Plex.TV now works and is persisted correctly.

--- a/PlexLander/Views/Settings/_PlexServerSettings.cshtml
+++ b/PlexLander/Views/Settings/_PlexServerSettings.cshtml
@@ -27,7 +27,7 @@
                 }
                 else
                 {
-                    <span class="glyphicon glyphicon-ok-circle label label-success"></span>
+                    <span class="glyphicon glyphicon-ok-circle"></span>
                 }
             </div>
         }
