--- a/PlexLander/Views/Settings/_PlexServerSettings.cshtml
+++ b/PlexLander/Views/Settings/_PlexServerSettings.cshtml
@@ -6,29 +6,26 @@
     <h3>Plex</h3>
 </div>
 <div class="panel-body">
-    @using (Html.BeginForm("SavePlexServerSettings", "Settings", FormMethod.Post))
+    <div class="form-group">
+        @Html.LabelFor(m => m.PlexServerSettingsViewModel.IsEnabled)?
+        @Html.ToggleSwitchFor(m => m.PlexServerSettingsViewModel.IsEnabled, disabled: true)
+    </div>
+
+    @if (Model.PlexServerSettingsViewModel.IsEnabled)
     {
-        <div class="form-group">
-            @Html.LabelFor(m => m.PlexServerSettingsViewModel.IsEnabled)?
-            @Html.ToggleSwitchFor(m => m.PlexServerSettingsViewModel.IsEnabled, disabled: true)
-        </div>
+    <div class="form-group" id="plexsettings-followup">
+        @Html.LabelFor(m => m.PlexServerSettingsViewModel.Token)<text>: </text>
+        @Model.PlexServerSettingsViewModel.Token<br />
+        @Html.LabelFor(m => m.PlexServerSettingsViewModel.HasAuthentication)?
 
-        if (Model.PlexServerSettingsViewModel.IsEnabled)
+        @if (!Model.PlexServerSettingsViewModel.HasAuthentication)
         {
-            <div class="form-group" id="plexsettings-followup">
-                @Html.LabelFor(m => m.PlexServerSettingsViewModel.Token)<text>: </text>
-                @Model.PlexServerSettingsViewModel.Token<br />
-                @Html.LabelFor(m => m.PlexServerSettingsViewModel.HasAuthentication)?
-
-                @if (!Model.PlexServerSettingsViewModel.HasAuthentication)
-                {
-                    <button type="button" class="btn btn-warning" onclick="showModal('#modalPlexAuthentication')">Authenticate</button>
-                }
-                else
-                {
-                    <span class="glyphicon glyphicon-ok-circle"></span>
-                }
-            </div>
+            <button type="button" class="btn btn-warning" onclick="showModal('#modalPlexAuthentication')">Authenticate</button>
         }
+        else
+        {
+            <span class="glyphicon glyphicon-ok-circle"></span> <button class="btn btn-success" onclick="callAndRefresh('@Url.Action("RefreshPlexServers","Settings")')">Refresh Servers</button>
+        }
+    </div>
     }
 </div>
