--- a/PlexLander/Views/WhatsNew/Index.cshtml
+++ b/PlexLander/Views/WhatsNew/Index.cshtml
@@ -1,7 +1,18 @@
 ﻿@using PlexLander.Models
-@using PlexLander.ViewModels.Settings
+@using PlexLander.ViewModels.WhatsNew
 @using PlexLander.HtmlHelpers
+@model IndexViewModel
 
 <div class="page-header">
     <h1>What's New</h1>
+</div>
+<div>
+    <h3>Server selector</h3>
+    @using (Html.BeginForm("Index", "WhatsNew", FormMethod.Post, new { @class = "form-inline" }))
+    {
+        <div class="form-group">
+            @Html.DropDownList("server", Model.Servers.Select(s => new SelectListItem() { Text = s.Name, Value = s.Name, Selected = (Model.SelectedServer == s)}), new { @class = "form-control"})
+            <button type="submit" class="btn btn-success">Refresh</button>
+        </div>
+    }
 </div>
